navbar alignment fix

--- a/frontend/src/components/navbar/Navbar.scss
+++ b/frontend/src/components/navbar/Navbar.scss
@@ -119,10 +119,13 @@
     }
 
     .nav-links {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       text-align: center;
       padding: 2rem;
       width: 100%;
-      display: table;
+      // display: table;
     }
 
     .nav-links:hover {
