--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -30,4 +30,5 @@ a {
 
 button {
   all: unset;
+  cursor: pointer;
 }
